--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: 
-  flutter_screenutil: 
   otp_text_field: ^1.1.2
   badges: ^2.0.2
   qr_flutter: ^4.0.0
+  responsive_framework: ^0.1.7
 
 
 dev_dependencies:
